--- a/Prediccion/templates/administracion_malla.html
+++ b/Prediccion/templates/administracion_malla.html
@@ -15,10 +15,10 @@
     <nav style="--bs-breadcrumb-divider: '▶';" aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'home' %}">Inicio</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Administración de Mallas</li>
+            <li class="breadcrumb-item active" aria-current="page">Administración de Mallas Curriculares</li>
         </ol>
     </nav>
-    <h2 class="text-center">Administración de Mallas</h2>
+    <h2 class="text-center">Administración de Mallas Curriculares de la carrera de Computación</h2>
     <a href="{% url 'nueva_malla' %}" class="btn btn-primary">Nueva Malla</a>
     <div class="container mt-4">
         <div class="row">
