--- a/Prediccion/templates/home.html
+++ b/Prediccion/templates/home.html
@@ -54,11 +54,7 @@
 {% endblock %}
 
 {% block content %}
-    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page">Inicio</li>
-        </ol>
-    </nav>
+    <h1 class="display-4">Predicciónes de la carrera de Computación</h1>
 
     <div class="container-fluid">
         <div class="row">
