--- a/Prediccion/templates/administracion_registros_periodos.html
+++ b/Prediccion/templates/administracion_registros_periodos.html
@@ -16,11 +16,11 @@
     <nav style="--bs-breadcrumb-divider: '▶';" aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'home' %}">Inicio</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Administración de Periodos</li>
+            <li class="breadcrumb-item active" aria-current="page">Administración de Periodos Académicos</li>
         </ol>
     </nav>
 
-    <h2 class="text-center">Administración de Periodos</h2>
+    <h2 class="text-center">Administración de Periodos Académicos de la carrera de computación</h2>
     <a href="{% url 'importar_datos' %}" class="btn btn-primary">Nuevo Periodo</a>
     <div class="container mt-4">
         <div class="row">
