--- a/Prediccion/templates/editar_malla.html
+++ b/Prediccion/templates/editar_malla.html
@@ -5,6 +5,19 @@
     Editar Malla
 {% endblock %}
 
+{% block extra_css %}
+    <style>
+        .card-cycle {
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100px; /* Ajusta la altura según sea necesario */
+            margin-bottom: 20px;
+        }
+    </style>
+{% endblock %}
+
 {% block content %}
 <nav style="--bs-breadcrumb-divider: '▶';" aria-label="breadcrumb">
     <ol class="breadcrumb">
@@ -65,47 +78,18 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card mb-4">
             <div class="card-header">
-                Ciclos y Asignaturas
+                Ciclos
             </div>
             <div class="card-body">
-                <ul class="nav nav-tabs" id="cycleTabs" role="tablist">
+                <div class="row">
                     {% for ciclo in ciclos_data %}
-                        <li class="nav-item">
-                            <a class="nav-link {% if forloop.first %}active{% endif %}" id="ciclo-tab-{{ ciclo.id }}" data-toggle="tab" href="#ciclo-{{ ciclo.id }}" role="tab" aria-controls="ciclo-{{ ciclo.id }}" aria-selected="{% if forloop.first %}true{% else %}false{% endif %}">{{ ciclo.nombre_ciclo }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
-                <div class="tab-content" id="cycleTabsContent">
-                    {% for ciclo in ciclos_data %}
-                        <div class="tab-pane fade {% if forloop.first %}show active{% endif %}" id="ciclo-{{ ciclo.id }}" role="tabpanel" aria-labelledby="ciclo-tab-{{ ciclo.id }}">
-                            <div class="form-group mt-3">
-                                <label for="nombre_ciclo_{{ ciclo.id }}">Nombre del Ciclo:</label>
-                                <input type="text" class="form-control" id="nombre_ciclo_{{ ciclo.id }}" name="nombre_ciclo_{{ ciclo.id }}" value="{{ ciclo.nombre_ciclo }}" required>
-                            </div>
-                            <h5 class="mt-4">Asignaturas</h5>
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Código</th>
-                                            <th>Nombre</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for subject in ciclo.subjects %}
-                                            <tr>
-                                                <td>
-                                                    <input type="text" class="form-control" id="codigo_asignatura_{{ subject.id }}" name="codigo_asignatura_{{ subject.id }}" value="{{ subject.codigo_asignatura }}" required>
-                                                </td>
-                                                <td>
-                                                    <input type="text" class="form-control" id="nombre_asignatura_{{ subject.id }}" name="nombre_asignatura_{{ subject.id }}" value="{{ subject.nombre_asignatura }}" required>
-                                                </td>
-                                            </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
+                        <div class="col-md-4">
+                            <div class="card card-cycle mb-3">
+                                <div class="card-body">
+                                    <input type="text" class="form-control" id="nombre_ciclo_{{ ciclo.id }}" name="nombre_ciclo_{{ ciclo.id }}" value="{{ ciclo.nombre_ciclo }}" required>
+                                </div>
                             </div>
                         </div>
                     {% endfor %}
@@ -134,16 +118,25 @@
                 type: 'POST',
                 data: formData,
                 success: function(response) {
-                    Swal.fire({
-                        title: 'Éxito',
-                        text: 'Malla curricular actualizada exitosamente.',
-                        icon: 'success',
-                        confirmButtonText: 'OK'
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            window.location.href = "{% url 'administracion_malla' %}";
-                        }
-                    });
+                    if (response.success) {
+                        Swal.fire({
+                            title: 'Éxito',
+                            text: 'Malla curricular actualizada exitosamente.',
+                            icon: 'success',
+                            confirmButtonText: 'OK'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                window.location.href = "{% url 'administracion_malla' %}";
+                            }
+                        });
+                    } else {
+                        Swal.fire({
+                            title: 'Error',
+                            text: 'Hubo un error al actualizar la malla curricular. Por favor, inténtelo de nuevo.',
+                            icon: 'error',
+                            confirmButtonText: 'OK'
+                        });
+                    }
                 },
                 error: function(response) {
                     Swal.fire({
