--- a/Prediccion/templates/base.html
+++ b/Prediccion/templates/base.html
@@ -9,41 +9,30 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
-            integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- LineIcons -->
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet"/>
-    <!-- SweetAlert2 -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/estilos_base.css' %}">
-    {% block extra_css %}
-    {% endblock %}
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
 <div class="d-flex">
     <!-- Sidebar -->
     <aside id="sidebar" class="sidebar-toggle">
         <div class="sidebar-logo">
-            <!-- imagen logo -->
             <img class="Logo" src="{% static 'img/image.png' %}" alt="Logo">
             <a href="#">TrackGuard</a>
         </div>
         <!-- Sidebar Navigation -->
         <ul class="sidebar-nav p-0">
             {% if user.is_authenticated %}
-                {% if user.is_registered %}
+                {% if user.is_consultor %}
                     <li class="sidebar-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
                         <a href="{% url 'home' %}" class="sidebar-link">
                             <i class="lni lni-home"></i>
                             <span>Inicio</span>
-                        </a>
-                    </li>
-                    <li class="sidebar-header">Modelo matemático</li>
-                    <li class="sidebar-item {% if request.resolver_match.url_name == 'modelo_matematico' %}active{% endif %}">
-                        <a href="{% url 'modelo_matematico' %}" class="sidebar-link">
-                            <i class="lni lni-popup"></i>
-                            <span>Modelo matemático</span>
                         </a>
                     </li>
                     <li class="sidebar-header">Predicciones</li>
@@ -53,7 +42,34 @@
                             <span>Predicciones</span>
                         </a>
                     </li>
+                    <li class="sidebar-item {% if request.resolver_match.url_name == 'simulacion' %}active{% endif %}">
+                        <a href="{% url 'simulacion' %}" class="sidebar-link">
+                            <i class="lni lni-graph"></i>
+                            <span>Simulación</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-header">Modelo matemático</li>
+                    <li class="sidebar-item {% if request.resolver_match.url_name == 'modelo_matematico' %}active{% endif %}">
+                        <a href="{% url 'modelo_matematico' %}" class="sidebar-link">
+                            <i class="lni lni-popup"></i>
+                            <span>Modelo matemático</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-header">Registros</li>
+                    <li class="sidebar-item {% if request.resolver_match.url_name == 'registros' %}active{% endif %}">
+                        <a href="{% url 'registros' %}" class="sidebar-link">
+                            <i class="lni lni-database"></i>
+                            <span>Registros almacenados</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-item {% if request.resolver_match.url_name == 'feedback' %}active{% endif %}">
+                        <a href="{% url 'enviar_feedback' %}" class="sidebar-link">
+                            <i class="lni lni-comments"></i>
+                            <span>Feedback</span>
+                        </a>
+                    </li>
                 {% endif %}
+
                 {% if user.is_admin %}
                     <li class="sidebar-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
                         <a href="{% url 'home' %}" class="sidebar-link">
@@ -80,11 +96,10 @@
                             <span>Administración de Usuarios</span>
                         </a>
                     </li>
-                    <li class="sidebar-header">Predicciones</li>
-                    <li class="sidebar-item {% if request.resolver_match.url_name == 'prediccion' %}active{% endif %}">
-                        <a href="{% url 'prediccion' %}" class="sidebar-link">
-                            <i class="lni lni-bar-chart"></i>
-                            <span>Predicciones</span>
+                    <li class="sidebar-item {% if request.resolver_match.url_name == 'feedback' %}active{% endif %}">
+                        <a href="{% url 'leer_feedback' %}" class="sidebar-link">
+                            <i class="lni lni-comments"></i>
+                            <span>Feedback</span>
                         </a>
                     </li>
                 {% endif %}
@@ -96,13 +111,6 @@
                         <span>Inicio</span>
                     </a>
                 </li>
-                <li class="sidebar-header">Modelo matemático</li>
-                <li class="sidebar-item {% if request.resolver_match.url_name == 'modelo_matematico' %}active{% endif %}">
-                    <a href="{% url 'modelo_matematico' %}" class="sidebar-link">
-                        <i class="lni lni-popup"></i>
-                        <span>Modelo matemático</span>
-                    </a>
-                </li>
                 <li class="sidebar-header">Predicciones</li>
                 <li class="sidebar-item {% if request.resolver_match.url_name == 'prediccion' %}active{% endif %}">
                     <a href="{% url 'prediccion' %}" class="sidebar-link">
@@ -110,10 +118,46 @@
                         <span>Predicciones</span>
                     </a>
                 </li>
+                <li class="sidebar-item {% if request.resolver_match.url_name == 'simulacion' %}active{% endif %}">
+                    <a href="{% url 'simulacion' %}" class="sidebar-link">
+                        <i class="lni lni-graph"></i>
+                        <span>Simulación</span>
+                    </a>
+                </li>
+                <li class="sidebar-header">Modelo matemático</li>
+                <li class="sidebar-item {% if request.resolver_match.url_name == 'modelo_matematico' %}active{% endif %}">
+                    <a href="{% url 'modelo_matematico' %}" class="sidebar-link">
+                        <i class="lni lni-popup"></i>
+                        <span>Modelo matemático</span>
+                    </a>
+                </li>
             {% endif %}
         </ul>
         <!-- Sidebar Navigation Ends -->
+
         <div class="sidebar-footer">
+            <!-- Sidebar Visual Options -->
+            <ul class="sidebar-nav p-0 mt-3">
+                <li class="sidebar-header">Opciones Visuales</li>
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link">
+                        <i class="lni lni-sun"></i>
+                        <span>Modo Claro</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link">
+                        <i class="lni lni-night"></i>
+                        <span>Modo Oscuro</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="#" class="sidebar-link">
+                        <i class="lni lni-layout"></i>
+                        <span>Personalizar</span>
+                    </a>
+                </li>
+            </ul>
             {% if user.is_authenticated %}
                 <a href="{% url 'signout' %}" class="sidebar-link">
                     <i class="lni lni-exit"></i>
@@ -139,8 +183,7 @@
             </div>
         </nav>
         <div class="container-fluid">
-            {% block content %}
-            {% endblock %}
+            {% block content %}{% endblock %}
         </div>
     </div>
 </div>
@@ -149,9 +192,13 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-<!-- popperjs  -->
+<!-- Popper.js -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-{% block extra_js %}
-{% endblock %}
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.7.1.slim.js"
+        integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
+<!-- SweetAlert2 -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+{% block extra_js %}{% endblock %}
 </body>
 </html>
